# dsa110-FLITS

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTEXT.md  DATA_LOCATIONS.md  DATA_SOURCES.md  ENTIRE_AUTH_HANDOFF.md  README.md  codetections_manifest.yaml  crossmatch_paper.tex  data-manifest.csv  environment.yml  foreground_table.tex  legacy_documents_data_checksum_manifest.yaml  machine_inventory.yaml  matplotlibrc  mkdocs.yml  noxfile.py  pyproject.toml  requirements.txt  run_freya_fitting.py
.agents/: audit-chime-side-dm.md  deferred-tasks.md  experiment-chance-coincidence-falsealarm.md  experiment-powerlaw-pbf.md  experiment-scint-subband-alpha.md  handoff-dt-min-per-band.md  implement-chime-side-dm-localization.md  implement-codetection-association-significance.md  implement-dt-min-per-band.md  pass-2-grill-decisions.md  plan-burst-energetics-calibration.md  plan-chime-side-dm-localization.md  plan-codetection-association-significance.md  plan-dt-min-per-band.md  research-chime-side-dm-localization.md  research-codetection-validation-rigor.md  research-joint-fit-state.md  research-multicomponent-joint-evidence.md
.archive/: burstfit_personal_fork.py
.archive/old_stuff/: .gitignore  All_Codetections_Waterfalls.ipynb  README.md  burstfittools_v2.py  dsa_localizations.json  scint_chromatica.ipynb  scint_nihari.ipynb  scint_zach.ipynb  scinttools_new.py  scinttools_v2.py  scinttools_v3.py  toolkit.cu
.claude/: settings.json
.claude/agents/: figure-reviewer.md  fit-validation.md
.claude/commands/: harden.md  reproduce.md  validate.md
.claude/hooks/: deferred-task-gate.sh  figure-review-gate.sh  no-commit-to-protected-branch.sh  ruff-fix.sh  validation-reinject.sh
.claude/workflows/: fit-verify.js
.codex/: config.toml  hooks.json
.codex/agents/: figure-reviewer.toml  fit-validation.toml
.cursor/rules/: AGENT_CONFIGURATION_FLITS.md
.entire/: settings.json
.experiments/chance-coincidence/: bursts.json  estimator_analytic.py  estimator_mc.py  inputs.py  run.py
.githooks/: post-rewrite  post-rewrite.pre-entire
.github/: copilot-instructions.md
.github/workflows/: claude-review.yml  docs-pages.yml  tests.yml
.scratch/: network_search_excess.py
.scratch/canfar-crossmatching/: bbdata_processing_utils.py  chime_dm_params.json  chime_dm_results.json  chime_dsa_onEarth.ipynb  dsa_dm_params.json  fil_to_npy.ipynb  process_bbdata.ipynb  toa_crossmatch.ipynb  toa_crossmatch.py  toa_crossmatch_results.json  toa_utilities.py
.trae/documents/: Create Comprehensive System Reference Documentation.md  Fitting Routines Code Review & Improvement Plan.md  Generate FRB Model Visualization Figures.md
02/950482c5f1/: metadata.json
0c/c97cffd175/: metadata.json
0f/12244a3b6b/: metadata.json
10/c0cb626ab0/: metadata.json
11/27f181acbf/: metadata.json
12/78bd1c3e5d/: metadata.json
14/f2d7c8732e/: metadata.json
15/f90d4fecc4/: metadata.json
16/e2227b5b01/: metadata.json
18/99558b453e/: metadata.json
18/9b0641173a/: metadata.json
1e/0b3c4f1c3e/: metadata.json
1e/2b978231b0/: metadata.json
1e/649e86115b/: metadata.json
analysis/: README.md  build_manuscript.py  calculate_burst_energies.py  chime_beam.py  dsa_beam.py  flux_cal.py  manuscript.tex  manuscript_figures.html
benchmarks/: benchmark_likelihood.py
crossmatching/: association.py  association_report.json  chime_side_inputs.json  chime_singlebeam.py  notebook_reproduction_fixture.json  plot_association_cards.py  plotting.py  toa_crossmatch.py
dispersion/: chime_dm.py  dmphasev2.py
docs/: .claude-review-smoketest.md  README_personal_fork_reference.md  REFACTORING_SUMMARY.md  codetection-science-plan.md  entire-tracing-checkpoints.md  freya_evidence.html  index.html  multiscale_sample.html  sim_fit_validation_deck.html
docs-analysis/: foreground.md  index.md  likelihood.md  model-selection.md  requirements.txt  verification.md  zach-case-study.md
flits/: __init__.py  models.py  plotting.py  sampler.py
flits/batch/: cli.py  (+12 more)
logs/: codex-branch-verdict.txt  codex-energies-landing.json  codex-guard-ab.json  codex-localbranch-verdict.txt  codex-pr59-review.json  codex-shim-verdict.txt  codex-supersede-verdict.txt  pr59.diff
reports/: d1_chime_burst_map.csv  d1_chime_burst_map.json  d2_chime_canfar_inventory.csv  d3_h17_arc_inventory.csv  d3_h17_arc_inventory.json  phase2_audit.json  phase3_arc_flits_diff.json  phase3_audit.json  phase3_chime_basename_inventory.csv  phase3_closeout_packet.json  phase4_audit.json
results/: chromatica_galaxies.csv  figures.manifest.json  figures.review.json  freya_galaxies.csv  hamilton_galaxies.csv  isha_galaxies.csv  johndoeii_galaxies.csv  joint_fit_summary.md  phineas_galaxies.csv  search_summary.csv  sightline_budget_sensitivity_priors.yaml  sightline_budget_sensitivity_summary.md  sightline_dm_scattering_budget.md  whitney_galaxies.csv  wilhelm_galaxies.csv  zach_galaxies.csv
scattering/: batch_process_dsa.py  compare_resolutions.py  run_scat_analysis.py  simple_runtime_test.py  test_quick_runtime.py
scintillation/: DATA_PROVENANCE.md
scratch/: codex_hook_probe.py  cov-commit-msg.txt  pr-body.md  pr-cov-body.md  wire_batch.py
scripts/: entire_checkpoint.py  generate_model_examples.py  query_machine_inventory.py  run_maistro_galaxy_search.py
simulation/: engine.py  recovery_campaign.py  references.bib  sim_fit_bridge.py  validate_unresolved_case.py  validate_wave_optics.py
tests/: test_association.py  test_beta_comodel.py  test_burst_energies_fluxcal.py  test_burstfit_core.py  test_chime_beam.py  test_chime_dm.py  test_chime_singlebeam_toa.py  test_crossmatching_notebook_reproduction.py  test_dmphase_recovery.py  test_flux_cal.py  test_gain_marginal_multi_band.py  test_issue4_commensurable.py  test_joint_prior_ordered.py  test_joint_summary_reproducible.py  test_maistro_galaxy_search.py  test_maistro_scattering.py  test_ne2025_floor.py  test_physics.py  test_pipeline_refactor.py  test_recovery_campaign.py  test_sampler.py  test_sim_fit_roundtrip.py  test_simulation_doppler.py
tools/: figure_manifest.py  sync_figures.py
(+1818 files in other folders)
