[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "flits"
version = "0.1.0"
description = "Fitting Likelihoods In Time-Frequency Spectra: FRB scattering and scintillation pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jakob Faber" }]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "matplotlib>=3.4,<3.11",
  "SciencePlots>=2.0",
  "pandas>=1.3",
  "emcee>=3.1",
  "lmfit>=1.0",
  "PyYAML>=5.4",
  "h5py>=3.9",
  "tqdm>=4.62",
  "corner>=2.2",
  "chainconsumer>=0.34",
  "astropy>=5.0",
  "astroquery",
  "pyvo",
  "adjustText>=0.8",
  "ipywidgets>=7.6",
]

[project.optional-dependencies]
# Guarded/function-level imports: core code runs without these and degrades
# (slower, or feature unavailable) only when the relevant path is exercised.
nested = ["dynesty>=2.1"]                                   # nested sampling / Bayesian evidence (burstfit_nested.py)
galactic = ["mwprop>=0.1.0", "mpmath>=1.0.0", "pygedm>=3.3.0", "setuptools<81"]  # NE2001/YMW16/NE2025 Galactic DM; mwprop needs mpmath (undeclared by mwprop); pygedm needs pkg_resources (setuptools<81) + a manual macOS build, see environment.yml
# CI-safe subset of `galactic`: the pure-Python NE2025-floor deps only (no pygedm, which has no linux wheel). Lets CI run tests/test_ne2025_floor.py.
ne2025 = ["mwprop>=0.1.0", "mpmath>=1.0.0"]
perf = ["numba>=0.54.0", "joblib>=1.1.0"]                   # optional JIT + parallelism (analysis.py, simulation/engine.py)

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  "nox>=2025.5.1",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]
lint = [
  "ruff>=0.15.18",
]

[project.scripts]
flits-scat = "scattering.run_scat_analysis:main"
flits-scint = "scintillation.scint_analysis.run_analysis:main"
flits-batch = "flits.batch.cli:main"
flits-configs = "flits.batch.config_generator:main"

[tool.setuptools.packages.find]
where = ["."]
namespaces = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--strict-config", "--strict-markers"]
pythonpath = ["."]  # make repo-root namespace dirs (analysis/, galaxies/) importable in tests
log_level = "INFO"
xfail_strict = true
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests", "scattering/scripts", "scattering/scat_analysis/tests", "scintillation/scint_analysis/tests", "flits/batch/tests", "analysis/scattering-refit-2026-06/test_gate_joint_committed.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["flits", "scattering", "scintillation"]
omit = ["*/tests/*", "*/scripts/*"]

[tool.coverage.report]
show_missing = true
# ponytail: no fail_under gate — coverage here nominates dead code, it doesn't gate CI

[tool.ruff]
line-length = 100
extend-exclude = [
  ".archive",
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  "analysis_results",
  "out_dir",
]

[tool.ruff.lint]
select = [
  "B",
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["flits", "galaxies", "scattering", "scintillation", "simulation"]
